# awsmp

./: pyproject.toml  tox.ini
snap/: snapcraft.yaml
