[project]
name = "awsmp"
version = "0.1.0"
description = ""
authors = [
  { name = "Thomas Bechtold", email = "thomas.bechtold@canonical.com" },
  { name = "Jess Jang", email = "jess.jang@canonical.com" },
  { name = "Ryan Hill", email = "ryan.hill@canonical.com" },
]
requires-python = ">=3.8"
readme = "README.rst"
dependencies = [
    "boto3>=1.28.85",
    "click>=8.1.7",
    "prettytable>=3.8.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[project.scripts]
awsmpcli = "awsmp.cli:main"
awsmp = "awsmp.cli:main"

[tool.poe.tasks]
tox = "tox"
lint = ["isort-check", "black-check", "mypy"]
format = ["isort", "black"]
test = "pytest --cov=awsmp"
test-cov-details = "pytest --cov=awsmp --cov-report term-missing"
black = "black ."
black-check = "black --check ."
isort = "isort ."
isort-check = "isort --check ."
mypy = "mypy . --check-untyped-defs"

[tool.black]
line-length = 120
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  docs
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["docs/*"]

[tool.mypy]
exclude = "docs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "boto3-stubs>=1.35.53",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "poethepoet>=0.29.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "types-pyyaml>=6.0.12.20240917",
    "typing-extensions>=4.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["awsmp"]
